fixed overflow bug on mobile/safari

--- a/client/src/components/product-card/productCard.module.css
+++ b/client/src/components/product-card/productCard.module.css
@@ -6,6 +6,7 @@
     border-radius: 10px;
     overflow: hidden;
     height: 25em;
+    position: relative;
 }
 
 .image-wrapper {
